# AutoVec

./: Cargo.toml  README.md
src/: deref.rs  index.rs  iter.rs  lib.rs  tests.rs
