[package]
name = "auto_vec"
version = "0.1.0"
edition = "2021"
description = "Vec that automatically remove the child that is droped"
repository = "https://https://github.com/lluvz/AutoVec/"
license = "MIT"
email = "2572502109@qq.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]