[package]
name = "auto_vec"
version = "0.1.5"
edition = "2021"
description = "Vec that automatically remove the child when the child is being dropped"
repository = "https://github.com/lluvz/AutoVec/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]